<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar_custom" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="?android:attr/textColorSecondary"
            android:text="@string/common_hello"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/todo_header_title"
            android:layout_marginBottom="32dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/completion_message"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/completion_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completion_back" />

    </LinearLayout>
</LinearLayout>
