<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar_custom" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="?android:attr/textColorSecondary"
                android:text="@string/common_hello"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/todo_header_title"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/todo_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/todo_input_placeholder"
                android:maxLines="1" />

            <Button
                android:id="@+id/todo_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:text="@string/todo_save" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/todo_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
